# html2nix

./: .gitignore  Html2Nix.py  LICENSE  README.md  flake.nix  html2nix.py  package.nix  pyproject.toml  requirements.txt  setup.py  shell.nix
input/: .gitignore
src/: Html2Nix.py
